@@ -1,0 +1,25 @@
+package Ex7;
+
+# Version.
+our $VERSION = 0.01;
+
+1;
+
+=pod
+
+=head1 EXAMPLE
+
+ # Pragmas.
+ use strict;
+ use warnings;
+
+ # Print.
+ print "Foo.\n";
+
+=begin html
+
+<img src="image/foo.png"/>
+
+=end html
+
+=cut
