@@ -1,6 +1,7 @@
 0.07
  - Fix LICENSE file.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Remove =begin html ... =end section from examples.
  - Update Module::Install to 1.14 version.
 
 0.06 2014-08-01T10:21:00+02:00
